--- a/example.env
+++ b/example.env
@@ -4,7 +4,7 @@
 
 COMPOSE_FILE="airflow.yml"
 COMPOSE_PROJECT_NAME="airflow"
-DOCKER_DIR="/Users/justin.flannery/airflow"
+DOCKER_DIR="/Users/juftin/airflow" # LOCATED @ ~/airflow
 
 ################################################################################
 # POSTGRESQL
