--- a/example.env
+++ b/example.env
@@ -21,3 +21,10 @@ POSTGRES_PASSWORD="airflow"
 AIRFLOW_EXECUTOR="Local"
 
 FERNET_KEY="CtGvdlzsjnE-uYik4IMOHyY4ofRv1uQGXKePBAMn2DQ="
+
+################################################################################
+# NETWORKING
+################################################################################
+
+TRAEFIK_SUBNET="192.168.101"
+INTERNAL_SUBNET="192.168.202"
