--- a/airflow.cfg
+++ b/airflow.cfg
@@ -71,7 +71,7 @@ executor = SequentialExecutor
 # The SqlAlchemy connection string to the metadata database.
 # SqlAlchemy supports many different database engine, more information
 # their website
-sql_alchemy_conn = postgresql+psycopg2://airflow:airflow@localhost:5432/airflow
+# sql_alchemy_conn = postgresql+psycopg2://airflow:airflow@localhost:5432/airflow
 
 # The encoding for the databases
 sql_engine_encoding = utf-8
@@ -204,7 +204,7 @@ api_client = airflow.api.client.local_client
 # If you set web_server_url_prefix, do NOT forget to append it here, ex:
 # ``endpoint_url = http://localhost:8080/myroot``
 # So api will look like: ``http://localhost:8080/myroot/api/experimental/...``
-endpoint_url = http://localhost:8080
+endpoint_url = http://airflow.localhost:80
 
 [debug]
 # Used only with DebugExecutor. If set to True DAG will fail with first
@@ -243,13 +243,13 @@ default_hive_mapred_queue =
 # The base url of your website as airflow cannot guess what domain or
 # cname you are using. This is used in automated emails that
 # airflow sends to point links to the right web server
-base_url = http://localhost:8080
+base_url = http://aiflow.localhost:80
 
 # The ip specified when starting the web server
 web_server_host = 0.0.0.0
 
 # The port on which to run the web server
-web_server_port = 8080
+web_server_port = 7878
 
 # Paths to the SSL certificate and key for the web server. When both are
 # provided SSL will be enabled. This does not change the web server port.
