--- a/example.env
+++ b/example.env
@@ -1,30 +1,9 @@
-################################################################################
-# DOCKER ENVIRONMENT
-################################################################################
-
-COMPOSE_FILE="airflow.yml"
 COMPOSE_PROJECT_NAME="airflow"
-DOCKER_DIR="/Users/juftin/airflow" # LOCATED @ ~/airflow
-
-################################################################################
-# POSTGRESQL
-################################################################################
-
+DOCKER_DIRECTORY="/Users/juftin/git/airflow"
+AIRFLOW_UID=501
+AIRFLOW_GID=0
+DOMAIN_NAME="localhost"
+AIRFLOW_SUBDOMAIN="airflow"
 POSTGRES_DB="airflow"
 POSTGRES_USER="airflow"
 POSTGRES_PASSWORD="airflow"
-
-################################################################################
-# POSTGRESQL
-################################################################################
-
-AIRFLOW_EXECUTOR="Local"
-
-FERNET_KEY="CtGvdlzsjnE-uYik4IMOHyY4ofRv1uQGXKePBAMn2DQ="
-
-################################################################################
-# NETWORKING
-################################################################################
-
-TRAEFIK_SUBNET="192.168.101"
-INTERNAL_SUBNET="192.168.202"
