--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.7'
 
 x-airflow-common:
   &airflow-common
-    image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.1.2}
+    image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.1.2-python3.8}
     environment:
       &airflow-common-env
         AIRFLOW__CORE__EXECUTOR:                    CeleryExecutor
@@ -15,9 +15,9 @@ x-airflow-common:
         AIRFLOW__API__AUTH_BACKEND:                 'airflow.api.auth.backend.basic_auth'
         _PIP_ADDITIONAL_REQUIREMENTS:               ${_PIP_ADDITIONAL_REQUIREMENTS:-}
     volumes:
-        - ${DOCKER_DIRECTORY}/airflow/dags:/opt/airflow/dags
-        - ${DOCKER_DIRECTORY}/airflow/logs:/opt/airflow/logs
-        - ${DOCKER_DIRECTORY}/airflow/plugins:/opt/airflow/plugins
+        - ${DOCKER_DIRECTORY}/airflow-config/dags:/opt/airflow/dags
+        - ${DOCKER_DIRECTORY}/airflow-config/logs:/opt/airflow/logs
+        - ${DOCKER_DIRECTORY}/airflow-config/plugins:/opt/airflow/plugins
     user:  "${AIRFLOW_UID:-50000}:${AIRFLOW_GID:-50000}"
     depends_on:
         redis:
